tests/ivg/invalid/unknown_path_instruction.ivg
format IVG-3
// path with unknown instruction
PATH [zap 1,1]
